# MRVN-Radiant

./: .gitignore  CMakeLists.txt  CMakeSettings.json  COMPILING.md  Makefile  README.md  TODO.md  download-gamepacks.sh  install-dlls-msys2-mingw.sh
.github/workflows/: build.yml
contrib/: CMakeLists.txt
contrib/bobtoolz/: CMakeLists.txt  DBrush.cpp  DEntity.cpp  DPatch.cpp  DPatch.h  DTreePlanter.h  shapes.cpp
contrib/brushexport/: CMakeLists.txt
contrib/meshtex/: CMakeLists.txt  GenericDialog.cpp  MeshEntity.cpp
contrib/prtview/: CMakeLists.txt  portals.cpp
contrib/shaderplug/: CMakeLists.txt  CMakelists.txt  shaderplug.cpp
docs/: docs.html  index.html  styles.css
docs/bspfilestructure/: index.html
docs/installation/: index.html
docs/shaders/: index.html
games/Titanfall2.game/: default_build_menu.xml
games/TitanfallOnline.game/: default_build_menu.xml
games/games/: ApexLegends.game  Titanfall2.game  TitanfallOnline.game
icons/: radiant.rc  remap.rc
include/: igl.h  ishaders.h  itextstream.h  modulesystem.h  selectable.h
install/gl/: xywindow.frag.glsl  (+1 more)
libs/: CMakeLists.txt  bytestreamutils.h  dragplanes.h  eclasslib.h  entitylib.h  render.h  selectionlib.h  timer.h  transformlib.h  undolib.h
libs/assimp/: CMakeLists.txt
libs/assimp/code/: CMakeLists.txt
libs/assimp/code/AssetLib/IFC/: IFCLoader.cpp
libs/assimp/code/AssetLib/MDL/: MDLFileData.h  MDLLoader.cpp  MDLLoader.h
libs/assimp/code/AssetLib/MDL/Respawn/: R1MDLFileData.h  R1MDLLoader.cpp  R1MDLLoader.h  R2MDLFileData.h  R2MDLLoader.cpp  R2MDLLoader.h  R5MDLFileData.h  R5MDLLoader.cpp  R5MDLLoader.h
libs/assimp/code/AssetLib/MMD/: MMDPmxParser.h
libs/assimp/code/Common/: BaseImporter.cpp  ZipArchiveIOSystem.cpp
libs/assimp/code/PostProcessing/: TriangulateProcess.cpp
libs/container/: hashfunc.h
libs/ddslib/: CMakeLists.txt
libs/debugging/: debugging.h
libs/generic/: vector.h
libs/gtkutil/: CMakeLists.txt  dialog.h  glfont.cpp  glfont.h  glwidget.cpp  nonmodal.h
libs/l_net/: CMakeLists.txt  l_net.c  l_net_wins.c
libs/math/: aabb.h  vector.h
libs/mathlib/: CMakeLists.txt
libs/profile/: CMakeLists.txt
libs/quickhull/: CMakeLists.txt  MathUtils.hpp  QuickHull.cpp  QuickHull.hpp
libs/quickhull/Structs/: Mesh.hpp  Plane.hpp  Vector3.hpp  VertexDataSource.hpp
libs/quickhull/Tests/: QuickHullTests.cpp
libs/stream/: stringstream.h  textfilestream.h  textstream.h
libs/xml/: CMakeLists.txt  xmltextags.cpp
plugins/: CMakeLists.txt
plugins/archivepak/: CMakeLists.txt
plugins/archivevpk/: CMakeLists.txt  archive.cpp  archive.h  archivevpk.def  plugin.cpp  plugin.h
plugins/archivewad/: CMakeLists.txt
plugins/archivezip/: CMakeLists.txt
plugins/assmodel/: CMakeLists.txt  assmodel.def  model.cpp
plugins/entity/: CMakeLists.txt  angles.h  doom3group.cpp  eclassmodel.cpp  entity.cpp  generic.cpp  group.cpp  light.cpp  miscmodel.cpp  rotation.h
plugins/image/: CMakeLists.txt
plugins/imagehl/: CMakeLists.txt
plugins/imagepng/: CMakeLists.txt
plugins/imageq2/: CMakeLists.txt
plugins/mapq3/: CMakeLists.txt
plugins/mapxml/: CMakeLists.txt
plugins/md3model/doc/: md3-design.txt
plugins/shaders/: CMakeLists.txt  shaders.cpp
plugins/vfspk3/: CMakeLists.txt  vfs.cpp
radiant/: CMakeLists.txt  autosave.cpp  autosave.h  brush.h  brushmanip.cpp  brushmodule.cpp  brushnode.h  build.cpp  camwindow.cpp  clippertool.cpp  colors.cpp  commands.cpp  console.cpp  csg.cpp  eclass_def.cpp  eclass_fgd.cpp  eclass_xml.cpp  entity.cpp  entityinspector.cpp  entitylist.cpp  environment.cpp  grid.cpp  gtkdlgs.cpp  gtkmisc.cpp  gtkmisc.h  help.cpp  main.cpp  mainframe.cpp  map.cpp  modelwindow.cpp  patch.cpp  patch.h  patchdialog.cpp  patchmanip.cpp  patchmodule.cpp  patchnode.h  pluginmanager.cpp  points.cpp  preferences.cpp  preferences.h  (+20 more)
radiant/dialogs/: module_server_dialog.cpp  module_server_dialog.h
radiant/gfx/: gl_helpers.cpp  gl_helpers.h  rendergraph.cpp  rendergraph.h
radiant/map/: mapmodule.cpp  mapmodule.h  mapwriter.cpp  mapwriter.h
tools/: CMakeLists.txt
tools/remap/: CMakeLists.txt  brush.cpp  bsp.cpp  bspfile_abstract.cpp  bspfile_abstract.h  bspfile_shared.cpp  convert_json.cpp  decals.cpp  games.cpp  games.h  image.cpp  leakfile.cpp  light.cpp  light_trace.cpp  lightmaps_ydnar.cpp  lump_names.h  main.cpp  mesh.cpp  model.cpp  patch.cpp  path_init.cpp  prtfile.cpp  remap.h  shaders.cpp  surface_extra.cpp  surface_meta.cpp  tjunction.cpp  visflow.cpp
tools/remap/apex_legends/: apex_legends.cpp  apex_legends.h  apex_legends_collisions.cpp
tools/remap/common/: cmdlib.cpp  inout.h  md4.cpp  polylib.h  qmath.h  stringfixedsize.h  vfs.cpp  vfs.h
tools/remap/source/: autopk3.cpp  bsp.cpp  bspfile_abstract.cpp  bspfile_abstract.h  bspfile_apex_legends.cpp  bspfile_apex_legends.h  bspfile_decompile_titanfall.cpp  bspfile_decompile_titanfall.h  bspfile_r1bsp.cpp  bspfile_r2bsp.cpp  bspfile_r2bsp.h  bspfile_r5bsp.cpp  bspfile_rbsp.cpp  bspfile_shared.cpp  bspfile_shared.h  bspfile_titanfall.cpp  bspfile_titanfall.h  bspfile_titanfall2.cpp  bspfile_titanfall2.h  convert_bsp.cpp  convert_json.cpp  convert_map.cpp  convert_obj.cpp  decals.cpp  exportents.cpp  facebsp.cpp  fog.cpp  games.cpp  games.h  help.cpp  image.cpp  light.cpp  light_bounce.cpp  light_trace.cpp  light_ydnar.cpp  lightmaps_ydnar.cpp  lump_names.h  main.cpp  map.cpp  mesh.cpp  (+17 more)
tools/remap/source/apex_legends/: apex_legends.cpp  apex_legends.h  apex_legends_misc.cpp  apex_legends_vis.cpp
tools/remap/source/titanfall/: titanfall.cpp  titanfall.h  titanfall_collisions.cpp  titanfall_decompile.cpp  titanfall_misc.cpp  titanfall_vis.cpp
tools/remap/source/titanfall2/: titanfall2.cpp  titanfall2.h  titanfall2_vis.cpp
tools/remap/titanfall/: titanfall.cpp  titanfall.h  titanfall_decompile.cpp  titanfall_misc.cpp  titanfall_vis.cpp
tools/remap/titanfall2/: titanfall2.cpp  titanfall2.h
tools/shared/: CMakeLists.txt  cmdlib.cpp  cmdlib.h  inout.cpp  qimagelib.cpp  qmath.h  scriplib.cpp  threads.cpp  toolsdef.h  vfs.cpp  vfs.h
tools/shared/vfs/: membuffer.h  vfs.cpp  vfs.h
(+37 files in other folders)
