set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/install/modules)



add_subdirectory(archivepak)
add_subdirectory(archivewad)
add_subdirectory(archivezip)
add_subdirectory(assmodel)
add_subdirectory(entity)
add_subdirectory(image)
add_subdirectory(imagehl)
add_subdirectory(imagepng)
add_subdirectory(imageq2)
add_subdirectory(shaders)
add_subdirectory(mapq3)
add_subdirectory(mapxml)
add_subdirectory(vfspk3)