add_library(bobtoolz MODULE
            bobToolz-GTK.cpp
            bobToolz-GTK.h
            bsploader.cpp
            bsploader.h
            cportals.cpp
            CPortals.h
            DBobView.cpp
            DBobView.h
            DBrush.cpp
            DBrush.h
            DEntity.cpp
            DEntity.h
            DEPair.cpp
            DEPair.h
            dialogs/dialogs-gtk.cpp
            dialogs/dialogs-gtk.h
            DMap.cpp
            DMap.h
            DPatch.cpp
            DPatch.h
            DPlane.cpp
            DPlane.h
            DPoint.cpp
            DPoint.h
            DShape.cpp
            DShape.h
            DTrainDrawer.cpp
            DTrainDrawer.h
            DTreePlanter.cpp
            DTreePlanter.h
            DVisDrawer.cpp
            DVisDrawer.h
            DWinding.cpp
            DWinding.h
            funchandlers-GTK.cpp
            lists.cpp
            lists.h
            misc.cpp
            misc.h
            ScriptParser.cpp
            ScriptParser.h
            shapes.cpp
            shapes.h
            visfind.cpp
            visfind.h
            bobToolz.def
           )

target_include_directories(bobtoolz PRIVATE .
                                            ${GLIB_INCLUDE_DIRS}
                                            ${QT5_INCLUDE_DIRS}
                          )

target_link_libraries(bobtoolz
                      commandlib
                      mathlib
                      profile
                      Qt5::Gui
                      Qt5::Widgets
                      Qt5::Core
                      ${GLIB_LIBRARIES}
                     )