add_library(imagehl
            hlw.cpp
            hlw.h
            imagehl.cpp
            imagehl.h
            mip.cpp
            mip.h
            sprite.cpp
            sprite.h
           )

#target_include_directories(shaders PRIVATE ${GLIB_INCLUDE_DIRS})
#target_link_libraries(shaders PRIVATE ${GLIB_LIBRARIES})